--- a/01-Harry-Potter-site/src/output.css
+++ b/01-Harry-Potter-site/src/output.css
@@ -544,6 +544,10 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.fixed {
+  position: fixed;
+}
+
 .absolute {
   position: absolute;
 }
@@ -552,24 +556,16 @@ video {
   position: relative;
 }
 
-.sticky {
-  position: sticky;
-}
-
 .bottom-20 {
   bottom: 5rem;
-}
-
-.bottom-10 {
-  bottom: 2.5rem;
 }
 
 .bottom-5 {
   bottom: 1.25rem;
 }
 
-.m-auto {
-  margin: auto;
+.z-10 {
+  z-index: 10;
 }
 
 .mx-auto {
@@ -585,20 +581,12 @@ video {
   margin-right: 0.5rem;
 }
 
-.mt-32 {
-  margin-top: 8rem;
-}
-
 .mt-2 {
   margin-top: 0.5rem;
 }
 
-.mt-8 {
-  margin-top: 2rem;
-}
-
-.mt-4 {
-  margin-top: 1rem;
+.mt-32 {
+  margin-top: 8rem;
 }
 
 .flex {
@@ -609,58 +597,36 @@ video {
   display: none;
 }
 
-.h-screen {
-  height: 100vh;
-}
-
 .h-10 {
   height: 2.5rem;
-}
-
-.h-6 {
-  height: 1.5rem;
 }
 
 .h-8 {
   height: 2rem;
 }
 
-.w-20 {
-  width: 5rem;
+.h-screen {
+  height: 100vh;
 }
 
-.w-80 {
-  width: 20rem;
+.w-20 {
+  width: 5rem;
 }
 
 .w-60 {
   width: 15rem;
 }
 
-.w-\[\] {
-  width: ;
+.w-8 {
+  width: 2rem;
 }
 
 .w-\[100\%\] {
   width: 100%;
 }
 
-.w-6 {
-  width: 1.5rem;
-}
-
-.w-8 {
-  width: 2rem;
-}
-
-@keyframes spin {
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.animate-spin {
-  animation: spin 1s linear infinite;
+.w-full {
+  width: 100%;
 }
 
 @keyframes bounce {
@@ -691,10 +657,6 @@ video {
   align-items: center;
 }
 
-.justify-center {
-  justify-content: center;
-}
-
 .justify-between {
   justify-content: space-between;
 }
@@ -703,10 +665,6 @@ video {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.rounded {
-  border-radius: 0.25rem;
 }
 
 .rounded-full {
@@ -728,8 +686,49 @@ video {
   background-color: rgb(30 64 175 / var(--tw-bg-opacity));
 }
 
+.bg-slate-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
+}
+
+.bg-green-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
+}
+
+.bg-green-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 101 52 / var(--tw-bg-opacity));
+}
+
+.bg-green-950 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(5 46 22 / var(--tw-bg-opacity));
+}
+
+.bg-slate-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
+}
+
 .bg-\[url\(\'\.\.\/public\/img\/bg-1\.avif\'\)\] {
   background-image: url('../public/img/bg-1.avif');
+}
+
+.bg-\[url\(\'\.\.\/public\/img\/bg-2\.png\'\)\] {
+  background-image: url('../public/img/bg-2.png');
+}
+
+.bg-\[url\(\'\.\.\/public\/img\/bg2\.png\'\)\] {
+  background-image: url('../public/img/bg2.png');
+}
+
+.bg-\[url\(\'\.\.\/public\/img\/bg2\.jpg\'\)\] {
+  background-image: url('../public/img/bg2.jpg');
+}
+
+.bg-\[url\(\'\.\.\/public\/img\/bg-3\.jpg\'\)\] {
+  background-image: url('../public/img/bg-3.jpg');
 }
 
 .bg-cover {
@@ -748,6 +747,22 @@ video {
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
+}
+
+.pt-32 {
+  padding-top: 8rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
+}
+
+.pt-44 {
+  padding-top: 11rem;
+}
+
+.pt-36 {
+  padding-top: 9rem;
 }
 
 .text-center {
